--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <nav class="navbar navbar-expand-md navbar-main">
     <div class="container-fluid">
         <a class="navbar-brand ms-0 me-2" href="#">
-            <img src="images/android-chrome-512x512.png" width="32" height="32" alt="logo">
+            <img alt="logo" height="32" src="images/android-chrome-512x512.png" width="32">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
