--- a/Personal/SwimTeamV2/index.html
+++ b/Personal/SwimTeamV2/index.html
@@ -36,8 +36,8 @@
     <span aria-hidden="true">&times;</span>
   </button>
   </div>
-  <h5 class="title-page-text text-center">Meadowmoor Swim Team</h5>
-  <nav class="navbar navbar-dark bg-light navbar-expand-lg">
+  <h5 class="title-page-text text-center">Meadowmoor Swim Team (lost css)</h5>
+  <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
