--- a/personal/CanvasSquares/index.html
+++ b/personal/CanvasSquares/index.html
@@ -3,14 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <!-- For alert -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&display=swap"
+          rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="/css/vars.css" rel="stylesheet">
     <link rel="stylesheet" href="Main.css">
-
+    <style>
+        .alert-info {
+            font-family: 'IBM Plex Sans', sans-serif;
+            background-color: var(--jaden-blue);
+            color: var(--jaden-black);
+            border-top-left-radius: 0;
+            border-top-right-radius: 0;
+        }
+    </style>
+    <!-- the end of alert -->
     <title>Squares</title>
 </head>
 <body>
+<div class="alert alert-info alert-dismissible fade show" role="alert">
+    <p class="mb-0 px-5 text-start">I created this quick page to explore how javascript worked and specify how well the
+        graphics were
+        about to keep up without lagging behind. I created it back in April 2022 and only took me a couple of days to
+        learn how to use the canvas element properly. The squares spawn in and fall down until it hits the ground which
+        is the bottom of the canvas. The spawn button creates a new square at a random location. Each square is a random
+        color.</p>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
 <canvas id="canvas" width="1920px" height="1080px"></canvas>
 <button type="button" onclick="spawn()">spawn</button>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 <script src="Main.js"></script>
 </body>
 </html>
