updated jaden image and added description alert for all projects. Also, crossed out V2 for swim team since it was not working and not worth it to show.

--- a/personal/SwimTeamV1/index.html
+++ b/personal/SwimTeamV1/index.html
@@ -10,72 +10,114 @@
     <script src="js/touch.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.jpg">
+    <!-- beginning of alert meta -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&display=swap"
+          rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="/css/vars.css" rel="stylesheet">
+    <link href="/css/alertInfo.css" rel="stylesheet">
+    <!-- end of alert meta -->
 </head>
+<!-- beginning of alert html -->
+<div class="alert alert-info alert-dismissible fade show" role="alert">
+    <h5 class="alert-heading text-start px-5">Description</h5>
+    <hr class="mx-5 my-1">
+    <p class="mb-0 px-5 text-start border-0">I built this website back in June 2017, and it was the very first website I
+        ever made.
+        There is no external framework, I coded the whole site from scratch, and it took me about a month or
+        two working on and off.
+        The website is not very modern, and the color scheme is not very pleasing to the eyes.
+        The layout is not very easy to navigate, and it can be hard to find what you are looking for at times.
+        A lot of the links no longer work since I no longer have access to the forms or PDFs.
+        However, each page is
+        fully responsive and able to be used on all mobile devices.
+    </p>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+<!-- end of alert html -->
 <nav>
-  <div id="header">
-     <div id="logo">
-        <img src="images/teamlogo2.gif" alt="logo">
-     </div>
-    <ul id="navbar">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="schedules.html">Schedules</a></li>
-        <li><a href="#">Events</a></li>
-        <li><a href="#">Registration</a></li>
-        <li><a href="#">Team Info</a></li>
-        <li><a href="#">About Us</a></li>
-    </ul>    
-  </div>
+    <div id="header">
+        <div id="logo">
+            <img src="images/teamlogo2.gif" alt="logo">
+        </div>
+        <ul id="navbar">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="schedules.html">Schedules</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Registration</a></li>
+            <li><a href="#">Team Info</a></li>
+            <!--        <li><a href="#">About Us</a></li>-->
+        </ul>
+    </div>
 </nav>
 
 <body>
-  <div class="maincontainer clearfix">
-        <img src="images/teamlogo.gif" alt="logo">
-        <div class="buttonsleft">
-        <a href="faq.html"><button class="button margin5" type="button">FAQ</button></a>
-        <a href="#"><button class="button" type="button">Volenteer/Sign up genius</button></a>
-        </div>
-        <div class="buttonsright">
-        <a href="https://www.teamunify.com/Home.jsp?team=ohss" target="_blank"><button class="button margin5" type="button">SwimUnited info</button></a>
-        <a href="mailto:jadenzaleski@icloud.com?subject=New%20Slideshow%20Pics!"><button class="button" type="button">Sumbit pics for slide show</button></a>
-        </div>
-      <hr>
-      <h1>Team Bio</h1>
-      <p>Meadowmooor is a neighborhood swim team that is part of the Strongsville Swim League. Our team is comprised of children and grandchildren of residents from Meadowood, Co-Moor and Eastland Park. Swimmers range from ages 5-18, no experience necessary. Our mission is to have fun, cultivate community and become better swimmers. Join us today!</p>
+<div class="maincontainer clearfix">
+    <img src="images/teamlogo.gif" alt="logo">
+    <div class="buttonsleft">
+        <a href="faq.html">
+            <button class="button margin5" type="button">FAQ</button>
+        </a>
+        <a href="#">
+            <button class="button" type="button">Volenteer/Sign up genius</button>
+        </a>
+    </div>
+    <div class="buttonsright">
+        <a href="https://www.teamunify.com/Home.jsp?team=ohss" target="_blank">
+            <button class="button margin5" type="button">SwimUnited info</button>
+        </a>
+        <a href="mailto:jadenzaleski@icloud.com?subject=New%20Slideshow%20Pics!">
+            <button class="button" type="button">Sumbit pics for slide show</button>
+        </a>
+    </div>
+    <hr>
+    <h1>Team Bio</h1>
+    <p>Meadowmooor is a neighborhood swim team that is part of the Strongsville Swim League. Our team is comprised of
+        children and grandchildren of residents from Meadowood, Co-Moor and Eastland Park. Swimmers range from ages
+        5-18, no experience necessary. Our mission is to have fun, cultivate community and become better swimmers. Join
+        us today!</p>
 
-  </div>
+</div>
 </body>
-   
+
 <footer class="footercontainer">
-  <small>
-  <h3>Contact Us</h3>
-  <table>
-    <tr>
-    <th>Name</th>
-    <th>Phone</th>
-    <th>Email</th>
-  </tr>
-  <tr>
-    <td>Harbene Zaleski</td>
-    <td>440-878-0728</td>
-    <td><a href="mailto:harbene@wowway.com">CLICK HERE</a></td>
-  </tr>
-  <tr>
-    <td>Tracy Stajcar</td>
-    <td>440-846-0155</td>
-    <td><a href="mailto:tstajcar65@gmail.com">CLICK HERE</a></td>
-  </tr>
-  <tr>
-    <td>Jennifer Tedeschi</td>
-    <td>216-235-4888</td>
-    <td><a href="mailto:Meadowmoorteam@gmail.com">CLICK HERE</a></td>
-  </tr>
+    <small>
+        <h3>Contact Us</h3>
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Phone</th>
+                <th>Email</th>
+            </tr>
+            <tr>
+                <td>Harbene Zaleski</td>
+                <td>440-878-0728</td>
+                <td><a href="mailto:harbene@wowway.com">CLICK HERE</a></td>
+            </tr>
+            <tr>
+                <td>Tracy Stajcar</td>
+                <td>440-846-0155</td>
+                <td><a href="mailto:tstajcar65@gmail.com">CLICK HERE</a></td>
+            </tr>
+            <tr>
+                <td>Jennifer Tedeschi</td>
+                <td>216-235-4888</td>
+                <td><a href="mailto:Meadowmoorteam@gmail.com">CLICK HERE</a></td>
+            </tr>
 
-</table>
-  <hr>
-  <p>Problems with the website? Email Jaden at <a href="mailto:jadenzaleski@icloud.com?subject=Website Problem">jadenzaleski@icloud.com.</a></p>
-  <p>Website created by Jeff and Jaden Zaleski.</p>
-  </small>
-  </footer>
+        </table>
+        <hr>
+        <p>Problems with the website? Email Jaden at <a href="mailto:jadenzaleski@icloud.com?subject=Website Problem">jadenzaleski@icloud.com.</a>
+        </p>
+        <p>Website created by Jeff and Jaden Zaleski.</p>
+    </small>
+</footer>
 
-
+<!-- alert js -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </html>
