--- a/personal/SwimTeamV2/swimmers.html
+++ b/personal/SwimTeamV2/swimmers.html
@@ -39,13 +39,13 @@
         <a class="nav-link" href="http://meadowmoorswim.com/schedules.html">Calendar</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://meadowmoorswim.com/reg.html">Registration</a>
+        <a class="nav-link" href="#">Registration</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://meadowmoorswim.com/teaminfo.html">Team Info</a>
+        <a class="nav-link" href="teaminfo.html">Team Info</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="http://meadowmoorswim.com/contact.html">Contact</a>
+        <a class="nav-link" href="#">Contact</a>
       </li>
     </ul>
   </div>
