--- a/personal/ColorPicker/index.html
+++ b/personal/ColorPicker/index.html
@@ -10,9 +10,28 @@
     
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
     <title>Free Color Picker</title>
+    <!-- beginning of alert meta -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&display=swap"
+          rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="/css/vars.css" rel="stylesheet">
+    <link href="/css/alertInfo.css" rel="stylesheet">
+    <!-- end of alert meta -->
   </head>
-  
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary justify-content-between">
+  <!-- beginning of alert html -->
+  <div class="alert alert-info alert-dismissible fade show" role="alert">
+    <h5 class="alert-heading text-start px-5">Description</h5>
+    <hr class="mx-5 my-1">
+    <p class="mb-0 px-5 text-start border-0">This is a simple color picker that allows you
+    to view the hex value of each color. I created this back in March 2018 over a couple of weekends, and it was one of my first web pages ever to use
+    javascript. The page makes use of Popper.js and my goal of this project was to gain a better understanding of javascript overall.</p>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+  <!-- end of alert html -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary justify-content-between px-2">
     <a class="navbar-brand" href="#" style="">
       <img src="images/home.png" width="30" height="28" alt="logo" class="invert mr-3">
       Custom Web Design
@@ -36,7 +55,7 @@
 
         </div>
         <div class="col-sm fadeInUp animated">
-          <h5 class="text-light font text-center ">Change Font Color</h5>
+          <h5 class="text-light font text-center ">Change Text Background</h5>
           <button type="button" class="jscolor{valueElement:'valueInput2', styleElement:'styleInput2'} font btn-primary btn btn-lg btn-block" >Edit</button>
         </div>
       </div>
@@ -45,6 +64,10 @@
   <script type="text/javascript" src="js/jscolor.min.js"></script>
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <!-- alert js -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+          crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
