working on Documentation.php

--- a/personal/CandyClicker/index.html
+++ b/personal/CandyClicker/index.html
@@ -64,9 +64,9 @@
         <h1 class="margin3 findsH">finds</h1>
         <div id="findList">
             <ul id="findListNavUl">
-                <li id="findListNavLi"><a id="findListNavA" onclick="showCommon();">common</a></li>
-                <li id="findListNavLi"><a id="findListNavA" onclick="showRare();">rare</a></li>
-                <li id="findListNavLi"><a id="findListNavA" onclick="showMythical();">mythical</a></li>
+                <li class="findListNavLi"><a class="findListNavA" onclick="showCommon();">common</a></li>
+                <li class="findListNavLi"><a class="findListNavA" onclick="showRare();">rare</a></li>
+                <li class="findListNavLi"><a class="findListNavA" onclick="showMythical();">mythical</a></li>
             </ul>
             
             <div id="commonList" class="findsList">
